--- a/hexlicsrv/image/Dockerfile
+++ b/hexlicsrv/image/Dockerfile
@@ -7,13 +7,13 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-COPY hexlicsrv90_x64linux.run /tmp/hexlicsrv90_x64linux.run
+COPY hexlicsrv_x64linux.run /tmp/hexlicsrv_x64linux.run
 COPY entrypoint.sh /entrypoint.sh
 COPY license_patch.py /opt/hexlicsrv/license_patch.py
 
 RUN chmod +x /entrypoint.sh && \
-    echo -e '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\ny\n\ny\n\nn\ny\n\n' | /tmp/hexlicsrv90_x64linux.run --mode text && \
-    rm /tmp/hexlicsrv90_x64linux.run && \
+    echo -e '\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\ny\n\ny\n\nn\ny\n\n' | /tmp/hexlicsrv_x64linux.run --mode text && \
+    rm /tmp/hexlicsrv_x64linux.run && \
     mkdir -p /opt/hexlicsrv/{CA,config,data,logs}
 
 ENTRYPOINT ["/entrypoint.sh"]
